[gd_scene load_steps=2 format=3 uid="uid://dnu74rkvcjo4v"]

[ext_resource type="Script" path="res://calculator.gd" id="1_67b7g"]

[node name="calc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_67b7g")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.337255, 0.337255, 0.337255, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "CALCULATOR"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="angka1" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="operasi" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="angka2" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="hasil" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
columns = 3

[node name="Button" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2
"

[node name="Button3" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Button7" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Button8" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Button9" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="Button10" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="Button11" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
text = "."

[node name="enter" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer"]
layout_mode = 2
text = "enter"

[node name="Container" type="HBoxContainer" parent="VBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.06

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Buttonplus" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[node name="Buttonmulti" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "X"

[node name="Buttondecre" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-"

[node name="Buttondevi" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "/"

[node name="ButtonC" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "C"

[node name="Buttonmodulus" type="Button" parent="VBoxContainer/BoxContainer2/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "%"

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
layout_mode = 2
offset_right = 285.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button5" to="." method="_on_button_5_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button6" to="." method="_on_button_6_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button7" to="." method="_on_button_7_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button8" to="." method="_on_button_8_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button9" to="." method="_on_button_9_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button10" to="." method="_on_button_10_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/Button11" to="." method="_on_button_11_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer/enter" to="." method="_on_enter_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer2/Buttonplus" to="." method="_on_buttonplus_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer2/Buttonmulti" to="." method="_on_buttonmulti_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer2/Buttondecre" to="." method="_on_buttondecre_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer2/Buttondevi" to="." method="_on_buttondevi_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer2/ButtonC" to="." method="_on_button_c_button_down"]
[connection signal="button_down" from="VBoxContainer/BoxContainer2/GridContainer2/Buttonmodulus" to="." method="_on_buttonmodulus_button_down"]
